syntax = "proto3";

option java_multiple_files = true;
option java_package = "dk.johannes.proto";

message MyRequest {
  int32 myRequestId = 1;
  string myRequestMessage = 2;
}

message MyResponse {
  int32 myResponseId = 1;
  string myResponseMessage = 2;
}

service MyServiceName {
  rpc GetMyResponse(MyRequest) returns (MyResponse);
}