syntax = "proto3";

option java_multiple_files = true;
option java_package = "dk.johannes.proto.stream";

message MyStreamRequest {
  int32 myRequestId = 1;
  string myRequestMessage = 2;
}

message MyStreamResponse {
  int32 myResponseId = 1;
  string myResponseMessage = 2;
}

service MyStreamServiceName {
  rpc GetMyResponse(MyStreamRequest) returns (stream MyStreamResponse);
}